[SW-91] Tuning Sparkling Water documentation